refactoring: speed up index update by Indexer